--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Daedalus Library</title>
     <link rel="stylesheet" href="../static/styles.css">
 </head>
 <body>
@@ -18,6 +18,6 @@
         </div>
     </div>
 
-    <script src="../static/dist/script.js"></script>
+    <script type="module" src="../static/dist/script.js"></script>
 </body>
 </html>
