Stopwatch works, lots of bugs
Known bugs at breakTimer - doesn't count down or show that the values are decreasing
finished - doesn't finish anything. kinda of confusing

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,19 @@
 <body>
     <div class="main-container center">
         <div class="timer-container center">
-            <div class="timer center">00:00:00</div>
+            <div id="timer" class="center">
+                <span class="digit" id="hr">
+                    00</span>
+                <span class="txt">Hr</span>
+                <span class="digit" id="min">
+                    00</span>
+                <span class="txt">Min</span>
+                <span class="digit" id="sec">
+                    00</span>
+                <span class="txt">Sec</span>
+                <span class="digit" id="count">
+                    00</span>
+            </div>
             <div class="buttons center">
                 <button id="studyBtn">study</button>
                 <button id="breakBtn">break</button>
