timer works once

--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@
             </div>
             <div class="buttons center">
                 <button id="studyBtn">study</button>
-                <button id="breakBtn">break</button>
+                <!-- <button id="breakBtn">break</button> -->
                 <button id="finishedBtn">finished</button>
             </div>
         </div>
